--- a/ATP/ATP.csproj
+++ b/ATP/ATP.csproj
@@ -68,6 +68,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Collections\Bar.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
